fix dark mode

--- a/style.css
+++ b/style.css
@@ -17,7 +17,6 @@ body {
   margin-inline: auto;
   padding-inline: 1.5rem;
   padding-block: 2rem;
-  color: oklch(15% 0% 0);
 }
 
 h1, h2, h3, h4, h5, h6 {
